syntax = "proto3";

package api;

option go_package = "./gen";

service UserManagement {
  rpc GetAbsences(GetAbsencesParams) returns (AbsencesList) {}
  rpc GetEmployee(GetEmployeeParams) returns (EmployeesList) {}
}

message Employee {
  int32 id = 1;
  string display_name = 2;
  string email = 3;
  string work_phone = 4;
}

message Absence {
  int32 id = 1;
  int32 personId = 2;
  string createdDate = 3;
  string dateFrom = 4;
  string dateTo = 5;
  int32 reasonId = 6;
  string displayName = 7;
}

message AbsenceData {
  int32 personId = 1;
  string displayName = 2;
}

message GetEmployeeParams {
  repeated int32 ids = 1;
  string email = 2;
  string name = 3;
  string workPhone = 4;
  string dateFrom = 5;
  string dateTo = 6;
}

message GetAbsencesParams {
  repeated int32 personIds = 1;
  string dateFrom = 2;
  string dateTo = 3;
}


message AbsencesList {
  string status = 1;
  repeated Absence data = 2;
}

message EmployeesList {
  string status = 1;
  repeated Employee data = 2;
}